# dtos/application/create.go
@@ -1,0 +1,7 @@
+package application_dtos
+
+type CreateApplicationDTO struct {
+	Name        string `json:"name" binding:"required"`
+	Description string `json:"description"`
+	AudienceID  string `json:"audience_id" binding:"required"`
+}
